Fix jumping sidebar with max-width for sidebar

--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -1,6 +1,7 @@
 .sidebar{
   border-radius: 10px 0 0 10px;
   color: var(--sidebar-text-color);
+  max-width: 210px;
 }
 .sidebar-text-color{
   color: var(--sidebar-text-color);
